@@ -1,4 +1,5 @@
 5.0
+ - Support for REPEATABLE READ isolation level.
  - Build fix for OS X.
  - Build fixes for clang++ 3.2.
  - Build fix for clang++ 3.0.
